fix: precision pass — fix GET event dispatch and config-not-found behaviour
Two remaining Orkes convergence gaps identified and fixed:

1. handlePing() now dispatches real events arriving via GET
   When verifier.handlePing() returns null (not a recognized ping challenge),
   the GET request is now treated as a real webhook event and dispatched
   inline to waiting WAIT_FOR_WEBHOOK tasks and workflowsToStart, with
   body="{}" and query params as payload. Previously these events were
   silently dropped.

2. handleWebhook() returns null when config not found (was: throws 400)
   Matches Orkes behaviour: returning HTTP 200 prevents retry storms when
   a webhook config is deleted while the provider still has the URL
   registered. Throwing 400 caused providers to retry with exponential
   backoff.

Both changes covered by updated tests.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>